<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="40dp"
    tools:context=".MainActivity">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btntest"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/btntest"
                android:textSize="20sp" />


            <ImageButton
                android:id="@+id/btnImage1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/content1"
                android:src="@drawable/star_be_ti" />

            <Button
                android:id="@+id/btnexit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnexit"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/edittext"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:hint="@string/ed_nam"
        tools:ignore="ExtraText" />
    
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg"
        android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb1"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rb2"
                android:textSize="18sp"/>
    </RadioGroup>

    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chkautosave"
                android:textSize="18sp"
                android:background="#bbb"/>


            <CheckBox
                android:id="@+id/checkBox1"
                style="?android:attr/starStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#F0AD36"
                android:gravity="center"
                android:text="@string/star"
                android:textSize="18sp"
                android:textColor="#00f" />

            <ToggleButton
                android:id="@+id/toggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ToggleButton" />
    </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt1"
            android:textColor="#ff0000"
            android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:src="@drawable/ca_lia_thia_1"
                android:contentDescription="@string/content2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:visibility="visible"/>


            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ca_lia_thia_2"
                android:visibility="visible"
                android:contentDescription="@string/content3"/>
    </LinearLayout>

</LinearLayout>



